# reflex

./: .env.example  .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
backend/: main.py  models.py
backend/services/: analyzer.py  exporter.py  mistral_client.py  multilingual.py
engine/: Cargo.toml  wasm-usage-example.js
engine/src/: complexity.rs  lib.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: About.tsx  AnalysisDiff.tsx  BlastRadiusView.tsx  CodeAnalysisView.tsx  CodeEditor.tsx  Dashboard.tsx  DependencyGraph.tsx  Gallery.tsx  LightningBg.tsx  PixelScene.tsx  RunbookViewer.tsx
frontend/src/data/: demo.ts  demoSnippets.ts
frontend/src/hooks/: useAnalysis.ts  useStore.ts
frontend/src/styles/: globals.css
scripts/: build-wasm.sh
tests/: test_reflex.py
